--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "author": "Eric Jacobs <eric@chomp.us> (http://techosaur.us/)",
-  "name": "milson",
-  "description": "Military Standard Object Notation",
-  "version": "0.0.1",
+  "author": "AJ ONeal <ajoneal@spotterrf.com> (http://coolaj86.info/)",
+  "name": "mildoc",
+  "description": "The documentation generator used by milson.org",
+  "version": "0.1.0",
   "repository": {
     "type": "git",
-    "url": "git://github.com/milson/milson-org.git"
+    "url": "git://github.com/milson/mildoc.git"
   },
   "engines": {
-    "node": "~0.6.7"
+    "node": ">= 0.2"
   },
   "dependencies": {
     "walk": "2.1.x",
@@ -18,8 +18,7 @@
     "jade": "0.20.x",
     "yaml": "0.2.x",
     "json2yaml": "1.x",
-    "forEachAsync": "2.x",
-    "connect": "~1.8.5"
+    "forEachAsync": "2.x"
   },
   "devDependencies": {}
 }
