--- a/mildoc/config.yml
+++ b/mildoc/config.yml
@@ -9,6 +9,10 @@
           id: "nodejs"
           filename: "nodejs.md"
         - 
+          title: "MILDOC Template"
+          id: "mildoc-template"
+          filename: "mildoc-template.md"
+        - 
           title: "Example Project"
           id: "example-project"
           filename: "example-project.md"
@@ -25,6 +29,10 @@
           title: "Publishing"
           id: "publishing"
           filename: "publishing.md"
+        - 
+          filename: "test-jade.jade"
+          title: "test-jade"
+          id: "test-jade"
       title: "Usage"
       id: "usage"
   templates: 
@@ -42,3 +50,4 @@
     - "java"
     - "cs"
     - "cpp"
+
